--- a/docs/docs/genai/flavors/chat-model-guide/index.mdx
+++ b/docs/docs/genai/flavors/chat-model-guide/index.mdx
@@ -638,7 +638,7 @@ model's source code, leading to:
   a particular result becomes challenging.
 
 By setting these values externally via the `model_config` parameter, we make the model flexible and adaptable to different test scenarios.
-This approach also integrates seamlessly with MLflow's evaluation tools, such as <APILink fn="mlflow.evaluate" />, which allows you to compare model
+This approach also integrates seamlessly with MLflow's evaluation tools, such as <APILink fn="mlflow.genai.evaluate" />, which allows you to compare model
 outputs across different configurations systematically.
 
 ### Defining the Model Configuration
