--- a/docs/docs/genai/prompt-version-mgmt/prompt-engineering/index.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/prompt-engineering/index.mdx
@@ -272,7 +272,7 @@ or you can [deploy it for real-time serving](#deploy-prompt-serving).
 
 ## Step 13: Perform metric-based evaluation of your model's outputs
 
-If you'd like to assess your model's performance on specific metrics, MLflow provides the <APILink fn="mlflow.evaluate" />
+If you'd like to assess your model's performance on specific metrics, MLflow provides the <APILink fn="mlflow.genai.evaluate" />
 API. Let's evaluate our model on some [pre-defined metrics](/genai/eval-monitor/predefined-judge-scorers)
 for text summarization:
 
@@ -304,10 +304,9 @@ data = pd.DataFrame(
 )
 
 with mlflow.start_run():
-    results = mlflow.evaluate(
-        model=logged_model,
+    results = mlflow.genai.evaluate(
+        predict_fn=logged_model,
         data=data,
-        targets="ground_truth",
         model_type="text-summarization",
     )
 
@@ -319,7 +318,7 @@ The evaluation results can also be viewed in the MLflow Evaluation UI:
 
 ![](/images/evaluate_metrics.png)
 
-The <APILink fn="mlflow.evaluate" /> API also supports [custom metrics](/genai/eval-monitor/custom-scorers),
+The <APILink fn="mlflow.genai.evaluate" /> API also supports [custom metrics](/genai/eval-monitor/custom-scorers),
 [static dataset evaluation](/genai/eval-monitor/concepts/eval-datasets), and much more. For a
 more in-depth guide, see [MLflow LLM Evaluation](/genai/eval-monitor).
 
