--- a/docs/docs/genai/prompt-version-mgmt/prompt-registry/evaluate-prompts.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/prompt-registry/evaluate-prompts.mdx
@@ -47,7 +47,7 @@ Once you have your setup, you can run your application with each selected prompt
     a. Modify your application code to load the specific prompt version from the registry (e.g., `mlflow.load_prompt(uri="prompts:/my-prompt/1")`, then `mlflow.load_prompt(uri="prompts:/my-prompt/2")`).
     b. Run your application against each item in your evaluation dataset.
     c. The traces generated will capture the outputs produced using that specific prompt version.
-3.  **Leverage `mlflow.evaluate()`**: MLflow's `mlflow.evaluate()` API is a powerful tool here. You can configure `mlflow.evaluate()` to:
+3.  **Leverage `mlflow.genai.evaluate()`**: MLflow's `mlflow.genai.evaluate()` API is a powerful tool here. You can configure it to:
     - Take your application (which internally loads a specific prompt version) as the "model" input.
     - Run it against your evaluation dataset.
     - Apply predefined or custom metrics (including LLM judges for quality assessment and functions to parse cost/latency from traces).
@@ -74,7 +74,7 @@ Consider:
 
 - Systematic prompt evaluation is key to improving GenAI application quality.
 - Define clear goals, metrics, and a representative evaluation dataset for your experiments.
-- Leverage MLflow Tracing to capture detailed execution data and `mlflow.evaluate()` to run evaluations and compute metrics across different prompt versions.
+- Leverage MLflow Tracing to capture detailed execution data and `mlflow.genai.evaluate()` to run evaluations and compute metrics across different prompt versions.
 - Analyze both quantitative metrics and qualitative trace data to understand prompt performance.
 - Make data-driven decisions for selecting and refining prompts, considering trade-offs between quality, cost, and latency.
 
@@ -212,18 +212,17 @@ def predict(data: pd.DataFrame) -> list[str]:
 
 ### 4. Run Evaluation
 
-Run the <APILink fn="mlflow.evaluate" /> API to evaluate the model with the prepared data and prompt. In this example, we will use the following two built-in metrics.
+Run the <APILink fn="mlflow.genai.evaluate" /> API to evaluate the model with the prepared data and prompt. In this example, we will use the following two built-in metrics.
 
 ```python
 with mlflow.start_run(run_name="prompt-evaluation"):
     mlflow.log_param("model", "gpt-4o-mini")
     mlflow.log_param("temperature", 0.1)
 
-    results = mlflow.evaluate(
-        model=predict,
+    results = mlflow.genai.evaluate(
+        predict_fn=predict,
         data=eval_data,
-        targets="targets",
-        extra_metrics=[
+        scorers=[
             mlflow.metrics.latency(),
             # Specify GPT4 as a judge model for answer similarity. Other models such as Anthropic,
             # Bedrock, Databricks, are also supported.
